--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/carlow314/Flashcard_Generator#readme",
   "dependencies": {
+    "fs": "0.0.1-security",
     "inquirer": "^3.2.0"
   }
 }
